--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Common data structures",
   "main": "index.js",
   "scripts": {
-    "test": "cls && jasmine spec/List_spec.js"
+    "test": "cls && jasmine"
   },
   "repository": {
     "type": "git",
